[gd_scene load_steps=46 format=2]

[ext_resource path="res://Assets/Spritesheets/golem-atk.png" type="Texture" id=1]
[ext_resource path="res://Assets/Spritesheets/golem-die.png" type="Texture" id=2]
[ext_resource path="res://Assets/Spritesheets/golem-walk.png" type="Texture" id=3]
[ext_resource path="res://Enemies/StateMachine2/StateMachine2.gd" type="Script" id=4]
[ext_resource path="res://Enemies/StateMachine2/Dying.gd" type="Script" id=5]
[ext_resource path="res://Enemies/StateMachine2/Attacking.gd" type="Script" id=6]
[ext_resource path="res://Enemies/StateMachine2/Searching.gd" type="Script" id=7]
[ext_resource path="res://Enemies/Enemy1.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 64, 96 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 288, 64, 96 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 288, 64, 96 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 288, 64, 96 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 288, 64, 96 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 288, 64, 96 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 288, 64, 96 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "attack left",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "walk left",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "walk right",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "attack right",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=37]
radius = 23.2949

[node name="Enemy1" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 4
collision_mask = 3
collision/safe_margin = 0.1
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 36 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 37 )

[node name="floorAheadCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 60, 50 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Searching" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Dying" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="checkRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 2

[node name="checkLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -100, 0 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 37 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
